# games_project_ryumshina

./: Makefile  README.md  main.py  pyproject.toml
VD_games/: engine.py
VD_games/VD_games/: cli.py
VD_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
VD_games/scripts/: VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  brain_calc.py
games_project_Ryumshina/scripts/: VD_games.py  VD_main.py
scripts/: vd_calc.py  vd_even.py  vd_gcd.py  vd_main.py  vd_prime.py  vd_progression.py
