[project]
name = "games-project-ryumshina"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["games_project_Ryumshina"]

[project.scripts]
VD-games = "games_project_Ryumshina.scripts.VD_main:main"
