[project]
name = "games-project-ryumshina"
version = "0.5.2"
description = "A collection of simple math games"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"
VD-even = "VD_games.scripts.VD_even:main"
brain-calc = "VD_games.scripts.brain_calc:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"

[tool.ruff]
select = ["E", "W", "F", "I"]
line-length = 88

[tool.ruff.per-file-ignores]



