[project]
name = "games-project-ryumshina"
version = "1.0.0"
description = "A collection of simple math games"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games", "scripts"]

[tool.setuptools]
packages = ["VD_games", "scripts"]

[tool.setuptools.package-dir]
"VD_games" = "VD_games"
"scripts" = "scripts"

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[project.scripts]
vd-games = "scripts.vd_games:main"
vd-even = "scripts.vd_even:main"
vd-calc = "scripts.vd_calc:main"
vd-gcd = "scripts.vd_gcd:main"
vd-progression = "scripts.vd_progression:main"
vd-prime = "scripts.vd_prime:main"

[tool.ruff]
select = ["E", "W", "F", "I"]
line-length = 100



